--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -32,7 +32,7 @@
 						</ul>
 					</nav>
 					<div class="mail">
-						<span></span>
+						<span><a href="/contact"></a></span>
 					</div>
 				</div>
 				<div class="menu">
