--- a/index.html
+++ b/index.html
@@ -18,101 +18,107 @@ include $_SERVER['DOCUMENT_ROOT'] . '/tmpl/header.html' ?>
 	<div class="main-visual">
 		<div class="img-area"></div>
 	</div>
-	<section class="what-we-are">
-		<h2 class="heading02">MAID IN KINGDAM</h2>
-		<div class="tx-area">
-			<p>テキストテキストテキストテキスト<br>
-			テキストテキストテキスト<br>
-			テキストテキストテキストテキストテキストテキスト<br>
-			テキストテキストテキストテキストテキストテキスト</p>
-			<p>テキストテキストテキストテキストテキスト<br>
-			テキストテキストテキストテキストテキストテキスト<br>
-			テキストテキストテキストテキスト</p>
+	<div class="clearfix">
+		<section class="what-we-are">
+			<h2 class="heading02">MAID IN KINGDAM</h2>
+			<div class="tx-area">
+				<p>テキストテキストテキストテキスト<br>
+				テキストテキストテキスト<br>
+				テキストテキストテキストテキストテキストテキスト<br>
+				テキストテキストテキストテキストテキストテキスト</p>
+				<p>テキストテキストテキストテキストテキスト<br>
+				テキストテキストテキストテキストテキストテキスト<br>
+				テキストテキストテキストテキスト</p>
+				</div>
+			<p class="buttonOverlay"><a href=""><span>MORE</span></a></p>		
+		</section>
+	</div>
+	<div class="clearfix">
+		<section class="what-we-do">
+			<h2 class="heading02">MAID IN KINGDAM</h2>
+			<div class="circle-wrapper">
+				<div class="circle-area">
+					<a href="">
+						<p class="circle"></p>
+						<h3 class="heading03">WEB SITE</h3>
+						<p class="tx-area02">テキストテキストテキストテキスト<br>
+						テキストテキストテキスト</p>
+					</a>
+				</div>
+				<div class="circle-area">
+					<a href="">
+						<p class="circle"></p>
+						<h3 class="heading03">WEB SERVICE</h3>
+						<p class="tx-area02">テキストテキストテキストテキスト<br>
+						テキストテキストテキスト</p>
+					</a>
+				</div>
+				<div class="circle-area">
+					<a href="">
+						<p class="circle"></p>
+						<h3 class="heading03">WORD PRESS</h3>
+						<p class="tx-area02">テキストテキストテキストテキスト<br>
+						テキストテキストテキスト</p>
+					</a>
+				</div>
 			</div>
-		<p class="buttonOverlay"><a href=""><span>MORE</span></a></p>		
-	</section>
-	<section class="what-we-do">
-		<h2 class="heading02">MAID IN KINGDAM</h2>
-		<div class="circle-wrapper">
-			<div class="circle-area">
-				<a href="">
-					<p class="circle"></p>
-					<h3 class="heading03">WEB SITE</h3>
-					<p class="tx-area02">テキストテキストテキストテキスト<br>
-					テキストテキストテキスト</p>
-				</a>
+			<p class="buttonOverlay"><a href=""><span>MORE</span></a></p>		
+		</section>
+	</div>
+	<div class="clearfix">
+		<section class="we-worked">
+			<div class="slick clearfix">
+				<ul class="slick-list">
+					<li class="slide-img">
+						<a href="">
+							<p class="img-area"><img src=""></p>
+							<div>
+								<p class="day">2019/05/05</p>
+								<p class="tx-area02">テキストテキストテキスト</p>
+							</div>
+						</a>
+					</li>
+					<li class="slide-img">
+						<a href="">
+							<p class="img-area"><img src=""></p>
+							<div>
+								<p class="day">2019/05/05</p>
+								<p class="tx-area02">テキストテキストテキスト</p>
+							</div>
+						</a>
+					</li>
+					<li class="slide-img">
+						<a href="">
+							<p class="img-area"><img src=""></p>
+							<div>
+								<p class="day">2019/05/05</p>
+								<p class="tx-area02">テキストテキストテキスト</p>
+							</div>
+						</a>
+					</li>
+					<li class="slide-img">
+						<a href="">
+							<p class="img-area"><img src=""></p>
+							<div>
+								<p class="day">2019/05/05</p>
+								<p class="tx-area02">テキストテキストテキスト</p>
+							</div>
+						</a>
+					</li>
+					<li class="slide-img">
+						<a href="">
+							<p class="img-area"><img src=""></p>
+							<div>
+								<p class="day">2019/05/05</p>
+								<p class="tx-area02">テキストテキストテキスト</p>
+							</div>
+						</a>
+					</li>
+				</ul>
 			</div>
-			<div class="circle-area">
-				<a href="">
-					<p class="circle"></p>
-					<h3 class="heading03">WEB SERVICE</h3>
-					<p class="tx-area02">テキストテキストテキストテキスト<br>
-					テキストテキストテキスト</p>
-				</a>
-			</div>
-			<div class="circle-area">
-				<a href="">
-					<p class="circle"></p>
-					<h3 class="heading03">WORD PRESS</h3>
-					<p class="tx-area02">テキストテキストテキストテキスト<br>
-					テキストテキストテキスト</p>
-				</a>
-			</div>
-		</div>
-		<p class="buttonOverlay"><a href=""><span>MORE</span></a></p>		
-	</section>
-	<section class="we-worked">
-		<div class="slick clearfix">
-			<ul class="slick-list">
-				<li class="slide-img">
-					<a href="">
-						<p class="img-area"><img src=""></p>
-						<div>
-							<p class="day">2019/05/05</p>
-							<p class="tx-area02">テキストテキストテキスト</p>
-						</div>
-					</a>
-				</li>
-				<li class="slide-img">
-					<a href="">
-						<p class="img-area"><img src=""></p>
-						<div>
-							<p class="day">2019/05/05</p>
-							<p class="tx-area02">テキストテキストテキスト</p>
-						</div>
-					</a>
-				</li>
-				<li class="slide-img">
-					<a href="">
-						<p class="img-area"><img src=""></p>
-						<div>
-							<p class="day">2019/05/05</p>
-							<p class="tx-area02">テキストテキストテキスト</p>
-						</div>
-					</a>
-				</li>
-				<li class="slide-img">
-					<a href="">
-						<p class="img-area"><img src=""></p>
-						<div>
-							<p class="day">2019/05/05</p>
-							<p class="tx-area02">テキストテキストテキスト</p>
-						</div>
-					</a>
-				</li>
-				<li class="slide-img">
-					<a href="">
-						<p class="img-area"><img src=""></p>
-						<div>
-							<p class="day">2019/05/05</p>
-							<p class="tx-area02">テキストテキストテキスト</p>
-						</div>
-					</a>
-				</li>
-			</ul>
-		</div>
-		<p class="buttonOverlay"><a href=""><span>MORE</span></a></p>	
-	</section>
+			<p class="buttonOverlay"><a href=""><span>MORE</span></a></p>	
+		</section>
+	</div>
 	<section class="about-member">
 		<h2 class="heading02">MAID IN KINGDAM</h2>
 		<div class="circle-wrapper">
