--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@ $keywords = '';
 
 $add_css_area = <<< EOD
 <link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/slick.css">
+<link rel="stylesheet" href="/css/slick-theme.css">
 EOD;
 
 $add_js_area = <<< EOD
+<script src="/js/slick/slick.min.js"></script>
 EOD;
 
 include $_SERVER['DOCUMENT_ROOT'] . '/tmpl/header.html' ?>
