190623index.html javascript

--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -27,10 +27,10 @@
 				<div class="flex-wrapper">
 					<nav class="h-nv">
 						<ul>
-							<li><a href="">WE ARE</a></li>
-							<li><a href="">WE DO</a></li>
-							<li><a href="">WE WORK</a></li>
-							<li><a href="">ABOUT MEMBER</a></li>
+							<li class="lineThrough"><a href="">WE ARE</a></li>
+							<li class="lineThrough"><a href="">WE DO</a></li>
+							<li class="lineThrough"><a href="">WE WORK</a></li>
+							<li class="lineThrough"><a href="">ABOUT MEMBER</a></li>
 						</ul>
 					</nav>
 					<div class="mail">
@@ -54,8 +54,16 @@
 				</div>
  				<div class="arrowWrap">
     				<div class="arrowInner">
-      					<p>SCROLL</p>
-      					<div class="arrow"></div>
+    					<a href="">
+	      					<p>SCROLL</p>
+	      					<div class="arrow"></div>
+      					</a>
+    				</div>
+    				<div class="topInner">
+    					<a href="">
+	      					<p>top</p>
+	      					<div class="returntop">▲</div>
+      					</a>
     				</div>
 				</div>
 			</section>
