--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ include $_SERVER['DOCUMENT_ROOT'] . '/tmpl/header.html' ?>
 					<section class="what-we-do">
 						<h2 class="heading02">MAID IN KINGDAM</h2>
 						<div class="circle-wrapper">
-							<div class="circle-area">
+							<div class="circle-area" id= "cia1">
 								<a href="">
 									<p class="circle"></p>
 									<h3 class="heading03">WEB SITE</h3>
@@ -56,7 +56,7 @@ include $_SERVER['DOCUMENT_ROOT'] . '/tmpl/header.html' ?>
 									テキストテキストテキスト</p>
 								</a>
 							</div>
-							<div class="circle-area">
+							<div class="circle-area" id= "cia2">
 								<a href="">
 									<p class="circle"></p>
 									<h3 class="heading03">WORD PRESS</h3>
