--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -22,49 +22,51 @@
 	</head>
 	<body id="top"<?php if ( $page_class !== '' ) echo ' class="' . $page_class . '"'; ?>>
 		<header>
-			<section> 
-				<h1>logo</h1>
-				<div class="flex-wrapper">
-					<nav class="h-nv">
-						<ul>
-							<li class="lineThrough"><a href="">WE ARE</a></li>
-							<li class="lineThrough"><a href="">WE DO</a></li>
-							<li class="lineThrough"><a href="">WE WORK</a></li>
-							<li class="lineThrough"><a href="">ABOUT MEMBER</a></li>
-						</ul>
-					</nav>
-					<div class="mail">
-						<span><a href="/contact"></a></span>
+			<div class="headerInner">
+				<section> 
+					<h1>logo</h1>
+					<div class="flex-wrapper">
+						<nav class="h-nv">
+							<ul>
+								<li class="lineThrough"><a href="">WE ARE</a></li>
+								<li class="lineThrough"><a href="">WE DO</a></li>
+								<li class="lineThrough"><a href="">WE WORK</a></li>
+								<li class="lineThrough"><a href="">ABOUT MEMBER</a></li>
+							</ul>
+						</nav>
+						<div class="mail">
+							<span><a href="/contact"></a></span>
+						</div>
 					</div>
-				</div>
-				<div class="menu">
-					<div class="menu-inner">
-					<span></span><span></span><span></span>
+					<div class="menu">
+						<div class="menu-inner">
+						<span></span><span></span><span></span>
+						</div>
 					</div>
-				</div>
-				<div class="g-nv closed" style="display: none;">
-					<nav>
-						<ul>
-							<li><a href="">WE ARE</a></li>
-							<li><a href="">WE DO</a></li>
-							<li><a href="">WE WORK</a></li>
-							<li><a href="">ABOUT MEMBER</a></li>
-						</ul>
-					</nav>
-				</div>
- 				<div class="arrowWrap">
-    				<div class="arrowInner">
-    					<a href="">
-	      					<p>SCROLL</p>
-	      					<div class="arrow"></div>
-      					</a>
-    				</div>
-    				<div class="topInner">
-    					<a href="">
-	      					<p>top</p>
-	      					<div class="returntop">▲</div>
-      					</a>
-    				</div>
-				</div>
-			</section>
+					<div class="g-nv closed" style="display: none;">
+						<nav>
+							<ul>
+								<li><a href="">WE ARE</a></li>
+								<li><a href="">WE DO</a></li>
+								<li><a href="">WE WORK</a></li>
+								<li><a href="">ABOUT MEMBER</a></li>
+							</ul>
+						</nav>
+					</div>
+	 				<div class="arrowWrap">
+	    				<div class="arrowInner">
+	    					<a href="">
+		      					<p>SCROLL</p>
+		      					<div class="arrow"></div>
+	      					</a>
+	    				</div>
+	    				<div class="topInner">
+	    					<a href="">
+		      					<p>top</p>
+		      					<div class="returntop">▲</div>
+	      					</a>
+	    				</div>
+					</div>
+				</section>
+			</div>
 		</header>
